# pgx

./: Cargo.toml  flake.nix
cargo-pgx/: default.nix
cargo-pgx/src/commands/: schema.rs
pgx/: Cargo.toml
pgx-examples/custom_types/sql/: load-order.txt
pgx-examples/custom_types/src/: lib.rs  submodule.rs
pgx-macros/: Cargo.toml
pgx-macros/src/: rewriter.rs
pgx-pg-bindings-generator/: Cargo.toml
pgx-pg-bindings-generator/src/: bindgen.rs  bindings_rewriter.rs  lib.rs  main.rs
pgx-pg-sys/: Cargo.toml  build.rs
pgx-pg-sys/src/: lib.rs  pg10.rs  pg10_oids.rs  pg11.rs  pg11_oids.rs  pg12.rs  pg12_oids.rs  pg13.rs  pg13_oids.rs  pgptr.rs
pgx-pg-sys/src/submodules/: guard.rs
pgx-pg-sys/src/type_impls/: function_call_info_base_data.rs  list.rs  mod.rs  name_data.rs  relation_data.rs
pgx/src/: fcinfo.rs  lib.rs  memcxt.rs  nodes.rs  rel.rs  spi.rs  stringinfo.rs  trigger_support.rs  tupdesc.rs  varlena.rs
pgx/src/datum/: from.rs  varlena.rs
